--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
                 <li><a href="#experiencia">Experiencia</a></li>
                 <li><a href="#proyectos">Proyectos</a></li>                
             </ul>
-
-
         </nav>
     </header>
+    <main>
+        <section id="inicio" class="hero">
+            <div class="hero-content"></div>
+        </section>
+    </main>
     
 </body>
 </html>
