--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <main>
         <section id="inicio" class="hero">
             <div class="hero-content"></div>
+            <div class="hero-content"></div>
+            <div class="hero-content"></div>
         </section>
     </main>
     
