Create a Init section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,25 @@
     </header>
     <main>
         <section id="inicio" class="hero">
-            <div class="hero-content"></div>
-            <div class="hero-content"></div>
-            <div class="hero-content"></div>
+            <div class="hero-content">
+                <div class="hero-text">
+                    <h1>Eduardo Gil</h1>
+                    <h2>Ingeniero de Software</h2>
+                    <p>Me gusta crear cosas intangibles que le faciliten a las personas comunicarse con su entorno
+                        a traves del aprendizaje de nuevas tecnologias y herramientas digitales.</p>
+                        <div class="social.links">
+                            <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                            <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                        </div>                        
+                </div>
+                <div class="hero-image">
+                    <img src="https://avatars.githubusercontent.com/u/39704866?v=4" alt="Foto de Eduardo Gil">
+                </div>
+            </div>            
+        </section>
+        <section id="experiencia" class="experiencia">
+            <h2 class="section-title">Experiencia Laboral</h2>
         </section>
     </main>
     
