--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
         </section>
         <section id="experiencia" class="experiencia">
             <h2 class="section-title">Experiencia Laboral</h2>
+            <div class="timeline">
+                <div class="timeline-item">                 
+                    <div class="timeline-content">
+                        <span class="date">2019 - Actualidad</span>
+                        <h3>Desrrollador .NET</div></h3>
+                        <h4>Mobiletec</h4>
+                        <p>Desarrollador de software .NET</p>
+                        <ul class="skills">
+                            <li>C# .NET</li>
+                            <li>WPF</li>
+                            <li>WCF - API REST</li>
+                            <li>SQL</li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
         </section>
     </main>
     
