--- a/index.html
+++ b/index.html
@@ -53,11 +53,90 @@
                             <li>SQL</li>
                         </ul>
                     </div>
-
+                </div>
+            </div>
+        </section>
+        <section id="Proyectos" class="projects">
+            <h2>Proyectos Personales</h2>
+            <div class="projects-container">
+                <div class="project-card" >
+                    <div class="project-img">
+                        <img src="proyecto-img.png" alt="proyectos">
+                    </div>
+                    <div class="project-info">
+                        <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. 
+                            Quisque faucibus ex sapien vitae pellentesque sem placerat. 
+                            In id cursus mi pretium tellus duis convallis. 
+                            Tempus leo eu aenean sed diam urna tempor. 
+                            Pulvinar vivamus fringilla lacus nec 
+                        metus bibendum egestas.</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" target="_blank"><i class="fab fa-github">Codigo</i></a>                            
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" >
+                    <div class="project-img">
+                        <img src="proyecto-img.png" alt="proyectos">
+                    </div>
+                    <div class="project-info">
+                        <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. 
+                            Quisque faucibus ex sapien vitae pellentesque sem placerat. 
+                            In id cursus mi pretium tellus duis convallis. 
+                            Tempus leo eu aenean sed diam urna tempor. 
+                            Pulvinar vivamus fringilla lacus nec 
+                        metus bibendum egestas.</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" target="_blank"><i class="fab fa-github">Codigo</i></a>                            
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card" >
+                    <div class="project-img">
+                        <img src="proyecto-img.png" alt="proyectos">
+                    </div>
+                    <div class="project-info">
+                        <h3>Lorem ipsum dolor sit amet consectetur adipiscing elit</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. 
+                            Quisque faucibus ex sapien vitae pellentesque sem placerat. 
+                            In id cursus mi pretium tellus duis convallis. 
+                            Tempus leo eu aenean sed diam urna tempor. 
+                            Pulvinar vivamus fringilla lacus nec 
+                        metus bibendum egestas.</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#" target="_blank"><i class="fab fa-github">Codigo</i></a>                            
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
-    
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2025 Eduardo Gil - Todos los derechos reservados</p>
+            <div class="social.links">
+                <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>        
+    </footer>
 </body>
 </html>
