creating css file

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
                     <h2>Ingeniero de Software</h2>
                     <p>Me gusta crear cosas intangibles que le faciliten a las personas comunicarse con su entorno
                         a traves del aprendizaje de nuevas tecnologias y herramientas digitales.</p>
-                        <div class="social.links">
+                        <div class="social-links">
                             <a href="#" target="_blank"><i class="fab fa-github"></i></a>
                             <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
                             <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                        </div>                        
+                        </div>
+                        <a href="#contacto" class="btn">Contáctame</a>                      
                 </div>
                 <div class="hero-image">
                     <img src="https://avatars.githubusercontent.com/u/39704866?v=4" alt="Foto de Eduardo Gil">
@@ -57,7 +58,7 @@
             </div>
         </section>
         <section id="Proyectos" class="projects">
-            <h2>Proyectos Personales</h2>
+            <h2 class="section-title">Proyectos Personales</h2>
             <div class="projects-container">
                 <div class="project-card" >
                     <div class="project-img">
@@ -131,7 +132,7 @@
     <footer>
         <div class="footer-content">
             <p>&copy; 2025 Eduardo Gil - Todos los derechos reservados</p>
-            <div class="social.links">
+            <div class="social-links">
                 <a href="#" target="_blank"><i class="fab fa-github"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
